...
              ),
              const Divider(height: 12),
              // 画笔
              _tool(
                context,
                Icons.edit,
                '画笔 (P)',
                controller.tool == BrushType.pen &&
                    controller.selectionTool == SelectionTool.none &&
                    !eyedropperActive &&
                    !textToolActive &&
                    !marqueeActive,
                onBrush,
...
